--- a/src/.env.example
+++ b/src/.env.example
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME="Photo Sharing App"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=database
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=webapp
+DB_USERNAME=webapp
+DB_PASSWORD=Passw0rd
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -23,7 +23,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
@@ -44,3 +44,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRCT="${APP_URL}/login/github/callback"
+
+MY_OAUTH_PROVIDER_CLIENT_ID=
+MY_OAUTH_PROVIDER_CLIENT_SECRET=
+MY_OAUTH_PROVIDER_REDIRCT="${APP_URL}/login/myoauthprovider/callback"
