--- a/src/composer.json
+++ b/src/composer.json
@@ -9,16 +9,21 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "doctrine/dbal": "^2.11",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.18.35",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.9.1",
+        "laravel/ui": "^1.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "nunomaduro/larastan": "^0.6.4",
+        "phpunit/phpunit": "^8.0",
+        "vimeo/psalm": "^3.16"
     },
     "config": {
         "optimize-autoloader": true,
